@@ -102,7 +102,7 @@ start()
 
     if [ "$ORACLEASM_ENABLED" != "true" ]
     then
-        exit 0
+        return
     fi
 
     load_module "${MODNAME}"
@@ -173,6 +173,39 @@ case "$1" in
         stop
         ;;
 
+    markdisk)
+        if [ -z "$2" ]
+        then
+            echo "Action \"markdisk\" requires an argument" >&2
+            exit 1
+        fi
+        mark_disk "$2"
+        if_fail $? "Unable to mark disk \"$2\""
+        perm_disk "$2"
+        if_fail $? "Unable to change ownership of disk \"$2\""
+        ;;
+
+    unmarkdisk)
+        if [ -z "$2" ]
+        then
+            echo "Action \"unmarkdisk\" requires an argument" >&2
+            exit 1
+        fi
+        unmark_disk "$2"
+        if_fail $? "Unable to unmark disk \"$2\""
+        unperm_disk "$2"
+        if_fail $? "Unable to change ownership of disk \"$2\""
+        ;;
+
+    checkdisk)
+        if [ -z "$2" ]
+        then
+            echo "Action \"checkdisk\" requires an argument" >&2
+            exit 1
+        fi
+        check_disk "$2"
+        ;;
+
     stop)
         stop
         ;;
@@ -183,40 +216,7 @@ case "$1" in
 	;;
 
     *)
-	echo "Usage: $0 {start|stop|restart|link|enable|disable|configure|status}"
-        exit 1
-esac
-
-exit 0
-
-case "$1" in
-    start)
-        fstab_check
-
-        echo -n $"Loading OCFS:"
-
-        # Note that UnitedLinux doesn't have NETWORKING=no
-
-        if grep '^ocfs ' /proc/modules >/dev/null 2>&1; then
-            rc_status -v
-            rc_exit
-        fi
-
-        "$LOAD_OCFS"
-        rc_status -v
-        ;;
-        
-    status)
-        echo -n $"Checking if OCFS is loaded: "
-        grep '^ocfs ' /proc/modules >/dev/null 2>&1
-        rc_status -v
-        ;;
-
-    stop|force-reload|restart)
-	;;
-
-    *)
-	echo "Usage: $0 {start|stop|status|restart|force-reload}"
+	echo "Usage: $0 {start|stop|restart|link|enable|disable|configure|markdisk|unmarkdisk|checkdisk|status}"
         exit 1
 esac
 
